syntax = "proto3";
package CommunicationProtocol;
option csharp_namespace = "Networking.Protobuf.CommunicationProtocol";

enum CommandType
{
    OpRequest = 0;
    OpResponse = 1;
    Event = 2;
}

enum EventCode
{
    Joined = 0;
    Left = 1;
}

enum OperationRequestCode
{
    Handshake = 0;
    RaiseEvent = 1;
}

enum OperationResponseCode
{
    InvalidProtocol = 0;
    InvalidLogin = 1;
    InvalidPassword = 2;
}

message OperationRequest
{
    OperationRequestCode RequestCode = 1;
    OperationResponseCode ResponseCode = 2;
    bytes Payload = 3;
}

message EventData
{
    //TODO: sender (server or other client)
    EventCode Code = 1;
    bytes Payload = 2; //TODO: change to dictionary alternatively
}

message HandshakePayload
{
    uint32 ProtocolVersion = 1;
}